# carbon-gtk

./: CMakeLists.txt  INSTALL  README  TODO  config.h.cmake
demo/: CMakeLists.txt  carbonbuttondemowidget.cpp  carbondemodialog.cpp  carbondemowidget.cpp  carbonframedemowidget.cpp  carbongtkdeco_main.cpp  carboninfowidget.cpp  carboninputdemowidget.cpp  carbonlistdemowidget.cpp  carbonsliderdemowidget.cpp  carbontabdemowidget.cpp  carbonversion.cpp
rc/: CMakeLists.txt  argb-apps.conf  gtkrc
src/: CMakeLists.txt  carbonapplicationname.cpp  carbonapplicationname.h  carbonargbhelper.cpp  carbonargbhelper.h  carboncachekey.h  carboncairocontext.cpp  carboncairocontext.h  carboncairopattern.h  carboncairosurface.h  carboncairoutils.cpp  carbongtkdetails.h  carbongtkicons.cpp  carbongtkicons.h  carbongtkrc.cpp  carbongtkrc.h  carbongtktypenames.cpp  carbongtktypenames.h  carbongtkutils.cpp  carbongtkutils.h  carbonmetrics.h  carbonoption.cpp  carbonoption.h  carbonqtsettings.cpp  carbonqtsettings.h  carbonrcstyle.cpp  carbonrcstyle.h  carbonrgba.cpp  carbonrgba.h  carbonshadowhelper.cpp  carbonshadowhelper.h  carbonstyle.cpp  carbonstyle.h  carbonstylehelper.cpp  carbonstylehelper.h  carbonstyleoptions.h  carbonstylewrapper.cpp  carbonstylewrapper.h  carbontaboptions.cpp  carbontaboptions.h  (+7 more)
src/animations/: carbonanimationengine.h  carbonanimations.cpp  carbonanimations.h  carbonbackgroundhintengine.cpp  carbonbackgroundhintengine.h  carboncomboboxdata.cpp  carboncomboboxdata.h  carboncomboboxengine.h  carboncomboengine.h  carbonflatwidgetengine.cpp  carbonhook.cpp  (+22 more)
(+1 files in other folders)
